--- a/kaleid/src/pages/home/home.html
+++ b/kaleid/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color='dark'>
     <ion-title>
-     DMT TRIP
+    Kaleidascope App 
     </ion-title>
   </ion-navbar>
 </ion-header>
